--- a/src/mainpage.css
+++ b/src/mainpage.css
@@ -807,6 +807,7 @@
 /* Close Button */
 .close-btn {
   position: absolute;
+  z-index: 1001 !important; /* Forces it above everything else */
   top: 16px;
   right: 18px;
   width: 42px;
